--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Testing">
         <activity android:name=".GroupInfoActivity"
-            android:parentActivityName=".GroupsActivity"
-            android:label="details"></activity>
-        <activity android:name=".GroupsActivity" />
+            android:label="Details"></activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
