--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Testing">
-        <activity android:name=".activity_addGroup"
+        <activity android:name=".activity_pullGroup"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".activity_pullUser"
             android:exported="true">
         </activity>
         <activity
             android:name=".activity_addUser"
-            android:label="@string/title_activity_main"
-            android:theme="@style/Theme.Testing.NoActionBar">
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Design.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activity_addGroup"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
