--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Testing">
-        <activity android:name=".activity_pullGroup"
-            android:exported="true">
-
-        </activity>
+        <activity android:name=".activity_pullAllData"
+            android:exported="true"></activity>
+        <activity
+            android:name=".activity_pullGroup"
+            android:exported="true"></activity>
         <activity
             android:name=".activity_pullUser"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".activity_addUser"
             android:label="@string/app_name"
@@ -29,7 +29,7 @@
         </activity>
         <activity
             android:name=".activity_addGroup"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
