1. add activity_addOrRemoveUserToGroup, which is a example of adding and remove User to/from Group.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Testing">
-        <activity android:name=".activity_pullAllData"
+        <activity
+            android:name=".activity_addOrRemoveUserToGroup"
             android:exported="true"></activity>
+        <activity
+            android:name=".activity_pullAllData"
+            android:exported="true" />
         <activity
             android:name=".activity_pullGroup"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".activity_pullUser"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".activity_addUser"
             android:label="@string/app_name"
