--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation "androidx.core:core-ktx:+"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.android.support:design:30.1.1'
 
     //Add anko even though it's deprecated as it's the only way I can easily find to make a chat
     implementation "org.jetbrains.anko:anko:$anko_version"
